--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>ITALIANOS PIZZAS</h1>
     <div class="menu">
         <button onclick="mostrarSecao('cadastro')">Cadastrar Pizza</button>
-        <!-- <button onclick="mostrarSecao('config')">Editar Informações</button>
-        <button onclick="mostrarSecao('pedidos')">Pedidos</button>
-        <button onclick="mostrarSecao('logar')">Login</button> -->
         <button onclick="mostrarSecao('consulta')">Consultar Pizzas</button>
+        <button onclick="mostrarSecao('alterar')">Alterar Pizzas</button>
+        <button onclick="mostrarSecao('venda')">Venda de Pizzas</button>
+        <button onclick="mostrarSecao('relatorio')">Relatório de Vendas</button>
     </div>
 
     <!--Seção de Cadastrar Pizzas-->
@@ -53,6 +53,29 @@
             </table>
         </div>
     </div>
+
+    <!--Seção de Alteração-->
+    <div id="alterar" class="hidden">
+        <h2>Alterar Pizzas</h2>
+        <input type="text" id="busca-alterar" placeholder="Buscar por nome da pizza" oninput="buscarPizzaParaAlterar()">
+        <div id="form-alterar" class="hidden">
+            <div class="form-group">
+                <label for="novo-nome">Novo Sabor:</label>
+                <input type="text" id="novo-nome" placeholder="Digite o novo sabor da pizza">
+            </div>
+            <div class="form-group">
+                <label for="novo-ingrediente">Novos ingredientes:</label>
+                <input type="text" id="novo-ingrediente" placeholder="Digite os novos ingredientes">
+            </div>
+            <div class="form-group">
+                <label for="novo-preco">Novo Preço:</label>
+                <input type="number" id="novo-preco" placeholder="Digite o novo preço">
+            </div>
+            <button onclick="alterarPizza()">Salvar Alterações</button>
+        </div>
+    </div>
+
+
 </div>
     <script src="pizzaria.js"></script>
 </body>
