--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="pizzaria.css">
     <title>Pizzaria</title>
 </head>
@@ -10,11 +11,12 @@
   <div class="container">
     <h1>ITALIANOS PIZZAS</h1>
     <div class="menu">
-        <button onclick="mostrarSecao('cadastro')">Cadastrar Pizza</button>
-        <button onclick="mostrarSecao('consulta')">Consultar Pizzas</button>
-        <button onclick="mostrarSecao('alterar')">Alterar Pizzas</button>
-        <button onclick="mostrarSecao('venda')">Venda de Pizzas</button>
-        <button onclick="mostrarSecao('relatorio')">Relatório de Vendas</button>
+        <button onclick="mostrarSecao('cadastro')"><i class="fas fa-plus-circle"></i> Cadastrar Pizza</button>
+        <button onclick="mostrarSecao('consulta')"><i class="fas fa-search"></i> Consultar Pizzas</button>
+        <button onclick="mostrarSecao('alterar')"><i class="fas fa-edit"></i> Alterar Pizzas</button>
+        <button onclick="mostrarSecao('venda')"><i class="fas fa-chart-line"></i> Venda de Pizzas</button>
+        
+        <button onclick="gerarRelatorioVendas()"><i class="fas fa-file-alt"></i> Relatório de Vendas</button>
     </div>
 
     <!--Seção de Cadastrar Pizzas-->
@@ -75,8 +77,46 @@
         </div>
     </div>
 
+    <!--Seção de Venda-->
+    <div id="venda" class="hidden">
+        <h2>Venda de Pizzas</h2>
+        <div class="form-group">
+            <label for="venda-nome">Sabor da Pizza:</label>
+            <input type="text" id="venda-nome" placeholder="Digite o sabor da pizza">
+        </div>
+        <div class="form-group">
+            <label for="venda-preco">Preço:</label>
+            <input type="number" id="venda-preco" placeholder="Digite o preço das pizzas">
+        </div>
+        <div class="form-group">
+            <label for="venda-cliente">Nome do Cliente:</label>
+            <input type="text" id="venda-cliente" placeholder="Digite o nome do cliente">
+        </div>
+        <button onclick="registrarVenda()">Registrar Venda</button>
+        <h3>Pizzas Vendidas</h3>
+        <ul id="lista-vendas">
+        </ul>
+    </div>
 
+    <!--Área do relatório-->
+    <div id="relatorio-vendas" class="hidden">
+        <h3>Relatório de Vendas</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Sabor</th>
+                    <th>Preço</th>
+                    <th>Cliente</th>
+                </tr>
+            </thead>
+            <tbody id="tabela-relatorio-vendas"></tbody>
+        </table>
+    </div>
 </div>
+
+ <div id="mensagem" class="mensagem hidden"></div>
+  </div>
+  
     <script src="pizzaria.js"></script>
 </body>
 </html>
