--- a/login.html
+++ b/login.html
@@ -7,6 +7,11 @@
     <title>Italianos Pizzas</title>
 </head>
 <body>
+
+    <header class="header-logo">
+  <img src="Logo_Minimalista_de_Pizzaria__1_-removebg-preview.png" alt="Logo Italianos Pizzas" />
+</header>
+
     
     <div id="login" class="container">
             <h1>Bem-vindo à Italianos!</h1>
